[package]
name = "supibot-connector"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.80"
chrono = "0.4.34"
envconfig = "0.10.0"
futures = "0.3.30"
irc = { version = "0.15.0", default-features = false, features = ["tls-rust"] }
redis = { version = "0.24.0", features = [
    "tokio-comp",
    "streams",
    "connection-manager",
] }
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"
tokio = { version = "1.36.0", features = ["full"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
